--- a/template/app.json
+++ b/template/app.json
@@ -3,7 +3,13 @@
     "pages/index/index",
     "pages/home/home",
     "pages/tabbarIndex/tabbarIndex",
-    "pages/result/result"
+    "pages/result/result",
+    "pages/Main/home_main",
+    "pages/Personal/personal",
+    "pages/Others/others",
+    "pages/Question/home_question/home_question",
+    "pages/Question/result_question/result_question",
+    "pages/Question/index_question/index_question"
   ],
   "window": {
     "backgroundTextStyle": "light",
